# sp-security

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.cargo/: config.toml
corelib/src/: lib.rs  security.rs
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/backend/src/config/: cache.rs  database.rs  mod.rs  parameter.rs
crates/backend/src/dto/: master_keypair.rs  mod.rs  partner.rs  partner_keypair.rs  payload_sec.rs
crates/backend/src/entity/: mod.rs  partner.rs  security.rs
crates/backend/src/error/: db_error.rs  mod.rs  security_error.rs
crates/backend/src/handler/: master_pk.rs  mod.rs  partner.rs  partner_pk.rs  payload_sec.rs  root.rs
crates/backend/src/layers/: api_logger.rs  build_versioner.rs
crates/backend/src/repository/: master_epk.rs  master_pk.rs  master_pk_repository.rs  mod.rs  partner.rs  partner_pk.rs  partner_pk_repository.rs
crates/backend/src/response/: api_response.rs
crates/backend/src/routes/: master_pk.rs  mod.rs  partner.rs  partner_pk.rs  root.rs  security.rs
crates/backend/src/service/: master_pk.rs  master_pk_service.rs  mod.rs  partner.rs  partner_pk.rs  partner_pk_service.rs  payload_sec.rs  payload_sec_service.rs
crates/backend/src/state/: master_pk_state.rs  mod.rs  partner_pk_state.rs  partner_state.rs  payload_sec_state.rs  security_state.rs
crates/corelib/: Cargo.toml
crates/corelib/src/: lib.rs  security.rs  security_error.rs
crates/local-client/: Cargo.toml
crates/local-client/src/: main.rs
local-client/: Cargo.toml
migrations/: 20230801112503_initial_migrations.sql
src/: main.rs
src/config/: database.rs  parameter.rs
src/dto/: decrypt_dto.rs  encrypt_dto.rs  healthcheck_dto.rs  master_keypair.rs  mod.rs  partner_keypair.rs  payload_sec.rs
src/entity/: security.rs
src/error/: api_error.rs  db_error.rs  keypair_error.rs  security_error.rs
src/handler/: healthcheck.rs  master_pk.rs  mod.rs  partner_pk.rs  payload_sec.rs
src/helper/: security.rs
src/layers/: api_logger.rs  mod.rs
src/repository/: master_pk_repository.rs  mod.rs  partner_pk_repository.rs
src/response/: api_response.rs
src/routes/: master_pk.rs  mod.rs  partner_pk.rs  root.rs  security.rs
src/service/: master_pk_service.rs  mod.rs  partner_pk_service.rs  payload_sec_service.rs
src/state/: master_pk_state.rs  mod.rs  partner_pk_state.rs  payload_sec_state.rs
