[package]
name = "sp-security"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.3", features = ["headers"] }
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.24.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
dotenv = "0.15.0"
serde =  { version = "1.0.152", features = ["derive"] }
jsonwebtoken = "8.3.0"
thiserror = "1.0.40"
chrono = {version = "0.4.24", features = ["serde"]}
bcrypt = "0.15.0"
serde_json = "1.0.95"
mockall = "0.11.4"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "migrate", "chrono", "time", "mysql"] }
validator = { version = "0.16.0", features = ["derive"] }
async-trait = "0.1.68"
sqlx-cli = "0.7.1"
tracing-subscriber = "0.3.17"
p256 = {version = "0.13.2", features = ["ecdh"]}
rand_core = {version = "0.6.4", features = ["getrandom"]}
hex = {version = "0.4.3"}
sha256 = {version = "1.2.2"}
base64 = {version = "0.21.2"}