[package]
name = "sp-security"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corelib = {path = "../corelib"}
axum = { version = "0.7.4", features = ["json", "tokio"] }
hyper = { version = "1.1.0", default-features = false }
tokio = { version = "1.24.2", default-features = false }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.5.1", features = ["trace"], default-features = false }
dotenv = "0.15.0"
serde =  { version = "1.0.152", default-features = false }
jsonwebtoken = { default-features = false, version = "9.2.0" }
thiserror = "1.0.40"
chrono = {version = "0.4.24", features=["serde"], default-features = false }
bcrypt = { default-features = false, version = "0.15.0" }
serde_json = { default-features = false, version = "1.0.95" }
sqlx = { version = "0.7.2", features = ["chrono", "macros", "postgres", "uuid", "runtime-tokio"] }
async-trait = "0.1.68"
sqlx-cli = { default-features = false, version = "0.7.1" }
p256 = {version = "0.13.2", features = ["std", "arithmetic", "ecdh"], default-features = false }
aes = {version = "0.8.3", default-features = false}
cbc = {version = "0.1.2", features = ["block-padding", "alloc"]}
hmac = {version = "0.12.1", default-features = false}
rand_core = {version = "0.6.4", default-features = false }
hex = {version = "0.4.3", default-features = false }
sha256 = {version = "1.2.2", default-features = false}
data-encoding = {version = "2.4.0", default-features = false, features = ["alloc"]}
structured-logger = {version = "1.0.2", default-features = false}
log = {version ="0.4.19", default-features = false}
axum-extra = {version = "0.9.2", default-features = false}
sha2 = {version = "0.10.7", default-features = false}
hkdf = {version = "0.12.3", default-features = false}
uuid = {version = "1.5.0", features= ["serde", "v7", "fast-rng"]}
rand = "0.8.5"
redis = {version = "0.24.0", features = ["tokio-comp", "ahash", "connection-manager", "keep-alive", "aio"]}